a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_zhou/invalid2.min
# assigning to an undeclared variable

var x: int;

y = 3;

